CB-17024 Automatically bring DH clusters into a favourable state when load based autoscaling is enabled with the stop / start scaling mechanism - Complete refactor of YarnLoadEvaluator - Regular cluster scaling is employed for the autoscaling hostgroup to reach the necessary node count for stop / start scaling to commence - MandatoryAdjustments are separated out from YarnLoadEvaluator into a separate service layer class - Now there is a distinction between REGULAR vs STOPSTART scaling and MANDATORY vs YARNBASED adjustments
Testing
- Introduced separate sets of parameterized tests for YarnBasedScalingAdjustmentService, RegularScalingAdjustmentService, StopStartScalingAdjustmentService
- Added extra UTs to YarnLoadEvaluator for machineUserCrn intervals, as well as appropriate invocations of mandatory and yarnBased adjustments