@@ -1,6 +1,8 @@
 package com.sequenceiq.periscope.monitor.handler;
 
-import static org.junit.Assert.assertEquals;
+import static com.sequenceiq.periscope.model.ScalingAdjustmentType.REGULAR;
+import static com.sequenceiq.periscope.model.ScalingAdjustmentType.STOPSTART;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -11,10 +13,11 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
-import org.junit.Before;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -23,6 +26,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import com.sequenceiq.cloudbreak.api.endpoint.v4.autoscales.AutoscaleV4Endpoint;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.autoscales.request.UpdateStackV4Request;
@@ -31,11 +35,13 @@ import com.sequenceiq.cloudbreak.client.CloudbreakServiceCrnEndpoints;
 import com.sequenceiq.cloudbreak.common.ScalingHardLimitsService;
 import com.sequenceiq.cloudbreak.message.CloudbreakMessagesService;
 import com.sequenceiq.periscope.api.model.AlertType;
+import com.sequenceiq.periscope.aspects.RequestLogging;
 import com.sequenceiq.periscope.domain.BaseAlert;
 import com.sequenceiq.periscope.domain.Cluster;
 import com.sequenceiq.periscope.domain.ClusterPertain;
 import com.sequenceiq.periscope.domain.MetricType;
 import com.sequenceiq.periscope.domain.ScalingPolicy;
+import com.sequenceiq.periscope.model.ScalingAdjustmentType;
 import com.sequenceiq.periscope.notification.HttpNotificationSender;
 import com.sequenceiq.periscope.service.AuditService;
 import com.sequenceiq.periscope.service.HistoryService;
@@ -52,7 +58,13 @@ public class ScalingRequestTest {
     private CloudbreakInternalCrnClient cloudbreakCrnClient;
 
     @Mock
+    private CloudbreakCommunicator cloudbreakCommunicator;
+
+    @Mock
     private LimitsConfigurationService limitsConfigurationService;
+
+    @Mock
+    private RequestLogging requestLogging;
 
     @Mock
     private Cluster cluster;
@@ -84,9 +96,11 @@ public class ScalingRequestTest {
     @Mock
     private UsageReportingService usageReportingService;
 
-    @Before
+    @BeforeEach
     public void setup() {
-        MockitoAnnotations.initMocks(this);
+        MockitoAnnotations.openMocks(this);
+        ReflectionTestUtils.setField(cloudbreakCommunicator, "cloudbreakInternalCrnClient", cloudbreakCrnClient);
+        ReflectionTestUtils.setField(cloudbreakCommunicator, "requestLogging", requestLogging);
     }
 
     public static Stream<Arguments> scaleUpNodeCountTesting() {
@@ -112,35 +126,52 @@ public class ScalingRequestTest {
 
         if (expectedNodeCount > 0) {
             initScaleUpMocks();
-            when(cluster.isStopStartScalingEnabled()).thenReturn(false);
             when(limitsConfigurationService.getMaxNodeCountLimit(anyString())).thenReturn(TEST_CLUSTER_MAX_NODE_COUNT);
-            ScalingRequest scalingRequest = initializeTestRequest(existingClusterNodeCount, existingHostGroupNodeCount, desiredHostGroupNodeCount, List.of());
+            ScalingRequest scalingRequest = initializeTestRequest(existingClusterNodeCount, existingHostGroupNodeCount, existingHostGroupNodeCount,
+                    desiredHostGroupNodeCount, Collections.emptyList(), REGULAR);
             scalingRequest.run();
 
             verify(autoscaleV4Endpoint, times(1)).putStack(anyString(), anyString(), captor.capture());
             UpdateStackV4Request request = captor.getValue();
-            assertEquals("Upscale nodecount should match", expectedNodeCount, request.getInstanceGroupAdjustment().getScalingAdjustment().intValue());
+            assertEquals(expectedNodeCount, request.getInstanceGroupAdjustment().getScalingAdjustment().intValue(), "Upscale nodecount should match");
         } else {
             verify(autoscaleV4Endpoint, times(0)).putStack(anyString(), anyString(), captor.capture());
         }
     }
 
+    public static Stream<Arguments> scaleUpNodeCountTestingForStopStart() {
+        return Stream.of(
+                //TestCase,ExistingClusterNodeCount,runningHostGroupNodeCount,stoppedHostGroupNodeCount,desiredHostGroupNodeCount,expectedScalingAdjustment
+                Arguments.of("SCALE_UP", 21, 3, 15, 10, 7),
+                Arguments.of("SCALE_UP", 52, 6, 43, 40, 34),
+                Arguments.of("SCALE_UP", 25, 19, 3, 20, 1),
+                Arguments.of("SCALE_UP", 160, 12, 145, 100, 88),
+                Arguments.of("SCALE_UP", 103, 97, 60, 140, 43),
+
+                Arguments.of("SCALE_UP_AT_MAX", 400, 73, 27, 140, 0),
+                Arguments.of("SCALE_UP_AT_MAX", 300, 16, 34, 200, 100),
+                Arguments.of("SCALE_UP_AT_MAX", 398, 29, 11, 52, 2),
+                Arguments.of("SCALE_UP_AT_MAX", 399, 43, 7, 52, 1)
+        );
+    }
+
     @ParameterizedTest(name = "{0}: With existingClusterNodeCount={1}, existingHostGroupNodeCount={2}, desiredHostGroupNodeCount ={3}, expectedNodeCount={4} ")
-    @MethodSource("scaleUpNodeCountTesting")
-    public void testScaleUpNodeCountWithStopStartScaling(String testCaseName, int existingClusterNodeCount, int existingHostGroupNodeCount,
-            int desiredHostGroupNodeCount, int expectedNodeCount) {
+    @MethodSource("scaleUpNodeCountTestingForStopStart")
+    public void testScaleUpNodeCountWithStopStartScaling(String testCaseName, int existingClusterNodeCount, int runningHostGroupNodeCount,
+            int stoppedHostGroupNodeCount, int desiredHostGroupNodeCount, int expectedNodeCount) {
         ArgumentCaptor<UpdateStackV4Request> captor = ArgumentCaptor.forClass(UpdateStackV4Request.class);
 
         if (expectedNodeCount > 0) {
             initScaleUpMocks();
-            when(cluster.isStopStartScalingEnabled()).thenReturn(true);
             when(limitsConfigurationService.getMaxNodeCountLimit(anyString())).thenReturn(TEST_CLUSTER_MAX_NODE_COUNT);
-            ScalingRequest scalingRequest = initializeTestRequest(existingClusterNodeCount, existingHostGroupNodeCount, desiredHostGroupNodeCount, List.of());
+            ScalingRequest scalingRequest = initializeTestRequest(existingClusterNodeCount,
+                    runningHostGroupNodeCount + stoppedHostGroupNodeCount, runningHostGroupNodeCount, desiredHostGroupNodeCount,
+                    Collections.emptyList(), STOPSTART);
             scalingRequest.run();
 
             verify(autoscaleV4Endpoint, times(1)).putStackStartInstancesByCrn(anyString(), captor.capture());
             UpdateStackV4Request request = captor.getValue();
-            assertEquals("Upscale nodecount should match", expectedNodeCount, request.getInstanceGroupAdjustment().getScalingAdjustment().intValue());
+            assertEquals(expectedNodeCount, request.getInstanceGroupAdjustment().getScalingAdjustment().intValue(), "Upscale nodecount should match");
         } else {
             verify(autoscaleV4Endpoint, times(0)).putStackStartInstancesByCrn(anyString(), captor.capture());
         }
@@ -165,12 +196,15 @@ public class ScalingRequestTest {
         when(cloudbreakCrnClient.withInternalCrn()).thenReturn(cloudbreakServiceCrnEndpoints);
         when(cloudbreakMessagesService.getMessage(anyString(), any(List.class))).thenReturn("test");
 
+        lenient().doCallRealMethod().when(requestLogging).logResponseTime(any(), anyString());
+        lenient().doCallRealMethod().when(cloudbreakCommunicator).putStackForCluster(any(Cluster.class), any(UpdateStackV4Request.class));
+        lenient().doCallRealMethod().when(cloudbreakCommunicator).putStackStartInstancesForCluster(any(Cluster.class), any(UpdateStackV4Request.class));
     }
 
-    private ScalingRequest initializeTestRequest(int existingClusterNodeCount, int hostGroupNodeCount,
-            int desiredHostGroupNodeCount, List<String> decommissionNodeId) {
+    private ScalingRequest initializeTestRequest(int existingClusterNodeCount, int hostGroupNodeCount, int servicesHealthyHostGroupNodeCount,
+            int desiredHostGroupNodeCount, List<String> decommissionNodeId, ScalingAdjustmentType adjustmentType) {
         ScalingRequest scalingRequest = new ScalingRequest(cluster, scalingPolicy, existingClusterNodeCount,
-                hostGroupNodeCount, desiredHostGroupNodeCount, decommissionNodeId);
+                hostGroupNodeCount, desiredHostGroupNodeCount, decommissionNodeId, servicesHealthyHostGroupNodeCount, adjustmentType);
         scalingRequest.setMetricService(metricService);
         scalingRequest.setScalingHardLimitsService(scalingHardLimitsService);
         scalingRequest.setCloudbreakInternalCrnClient(cloudbreakCrnClient);
@@ -180,6 +214,7 @@ public class ScalingRequestTest {
         scalingRequest.setHttpNotificationSender(notificationSender);
         scalingRequest.setAuditService(auditService);
         scalingRequest.setUsageReportingService(usageReportingService);
+        scalingRequest.setCloudbreakCommunicator(cloudbreakCommunicator);
         return scalingRequest;
     }
 }
